Try to fix medische_info page on mobiles

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,6 +84,7 @@ ul.aerial li {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     opacity: 0;
+    overflow: hidden;
 }
 
 // Animate the list items
